*Empty MediaWiki Message*

--- a/Lats.mw
+++ b/Lats.mw
@@ -2,7 +2,7 @@
 
 '''Lats''' om nuur [[inemine]].
 
-Ütidside Rahvidõ Latsõ Õiguisi Konvents'oonin mõistõtas latsõ all kooni 18-aastagast inemist, ku latsõ suhtõn kohaldatava säädüse perrä ei loetaq tedä inne täüsiälidses. 
+[[Ütistünüq rahvaq|ÜRO]] Latsõ Õiguisi Konvents'oonin mõistõtas latsõ all kooni 18-aastagast inemist, ku latsõ suhtõn kohaldatava säädüse perrä ei loetaq tedä inne täüsiälidses. 
 
 '''Lats''' om ka edimädse põlvõ perrätulõja (nt. egaüts om uma imä lats).
 
