*Empty MediaWiki Message*

--- a/Lats.mw
+++ b/Lats.mw
@@ -6,4 +6,7 @@
 
 '''Lats''' om ka edimädse põlvõ perrätulõja (nt. egaüts om uma imä lats).
 
+== Ütlemiisi latsi kotsilõ==
+*Lats ikkõh kasus, vana oiatõh eläs. ([[Põlva kihlkund]])
+
 [[Katõgooria:Pereq]]
