*Empty MediaWiki Message*

--- a/Poiss.mw
+++ b/Poiss.mw
@@ -1,4 +1,4 @@
-'''Poiss''' om nuur [[esäne]] [[inemine]], tulõvanõ nuurmiis ja ildampa [[miis]]. Poisiq ja [[tütrik|tütriguq]] ommaq [[lats]]õq.
+'''Poiss''', '''poiskõnõ''' vai '''ts'ura''' om nuur [[esäne]] [[inemine]], tulõvanõ nuurmiis ja ildampa [[miis]]. Poisiq ja [[tütrik|tütriguq]] ommaq [[lats]]õq.
 
 == Kaeq viil ==
 * [[Tütrik]]
