--- a/Õdagu-Viro_maakund.mw
+++ b/Õdagu-Viro_maakund.mw
@@ -1,5 +1,14 @@
 '''Õdagu-Viro maakund''' om põrõhõlladsõ [[Eesti]] Vabariigi [[1. järgo valitsõmisütsüs]], miä luudi 1990. aastagal, ku [[Eesti NSV]] [[Rakvere rajuun]] nimetediq ümbre Õdagu-Viro maakunnas. 
 
+<gallery>
+Porkuni linnuse väravatorn.jpg|
+Sagadi mõisa peahoone pargipoolne külg.jpg|
+Mõdriku mõisa peahoone.jpg|
+Vihula mõisa tuuleveski.jpg|
+Laekvere mänd 04-2012.JPG|
+Neeruti Tagajärv.jpg|
+</gallery>
+
 {{Eesti Vabariigi maakunnaq}}
 
 [[Katõgooria:Eesti maakunnaq]]
