*Empty MediaWiki Message*

--- a/Linnuk.mw
+++ b/Linnuk.mw
@@ -3,8 +3,7 @@
 
 == Aolugu ==
 
-Edimädse linnuki, minkaga linnata sai, ehitiväq ameeriklasõq [[veleq Wrightiq]] 1903. aastagal.<ref name="WDL">{{cite web |url = http://www.wdl.org/en/item/11372/ |title = Telegram from Orville Wright in Kitty Hawk, North Carolina, to His Father Announcing Four Successful Flights, 1903 December 17 |website = [[World Digital Library]] |date = 1903-12-17 |accessdate = 2013-07-21 }}</ref>
-
+Edimädse linnuki, minkaga linnata sai, ehitiväq ameeriklasõq [[veleq Wrightiq]] 1903. aastagal.<ref>http://www.wdl.org/en/item/11372/</ref>
 == Kaeq viil ==
 * [[Lauglinnuk]]
 
