*Empty MediaWiki Message*

--- a/Kikkamari.mw
+++ b/Kikkamari.mw
@@ -1,6 +1,6 @@
 [[Pilt:Kukemari Ördi rabas.JPG|pisi|Kikkamari]]
 
-'''Kikkamari''' (ladina k. ''Empetrum'') om kasvõ pereq kanariguliidsi sugukunnast. Taad tundas timä mustõ piinüide marjo perrä, miä kasusõq suun. Kikkamar'aq ummaq tävveste mustaq ja inämbüisi mustikist vähämbäq. Naaq ummaq tävveste süüdäväq mar'aq, õnnõgi vähä vesitsembä maiguga ku mustigaq. Eestih inämbüisi teedä-äi, et kikkamarjo või süvväq, a mõnõq põh'amaa rahvaq, näütüses saamiq, ommaq naid kõik aig söögis pruuknuq. Soomõh tetäs kikkamar'ost näütüses mahla ja veini.
+'''Kikkamari''' (ladina k. ''Empetrum'') om kasvõ pereq kanariguliidsi sugukunnast. Taad tundas timä mustõ piinüide marjo perrä, miä kasusõq suun. Kikkamar'aq ummaq tävveste mustaq ja inämbüisi mustikist vähämbäq. Naaq ummaq tävveste süüdäväq mar'aq, õnnõgi vähä vesitsembä maiguga ku mustigaq. Eestih inämbüisi teedä-äi, et kikkamarjo või süvväq, a mõnõq põh'amaa rahvaq, näütüses saamiq, ommaq naid kõik aig söögis pruuknuq. Soomõh tetäs kikkamar'ost näütüses veini ja mahla, midä või ka poodõst löüdäq.
 
 [[Katõgooria:Mar'aq]]
 
