*Empty MediaWiki Message*

--- a/Belgiä.mw
+++ b/Belgiä.mw
@@ -8,7 +8,7 @@ Kaart=Image:LocationBelgium.png|
 Riigikiil'=[[hollandi kiil']], [[prantsusõ kiil']], [[s'aksa kiil']]|
 Pääliin=[[Brüssel]]|
 Riigitüübi pää=Kuning|
-Riigipää=[[Albert II]]|
+Riigipää=[[Filip]]|
 Pääministri=[[Elio Di Rupo]]|
 Suurus=30 528|
 Suurusõ perrä=148|
