--- a/Jõgõva_maakund.mw
+++ b/Jõgõva_maakund.mw
@@ -1,5 +1,14 @@
 '''Jõgõva maakund''' om põrõhõlladsõ [[Eesti]] Vabariigi [[1. järgo valitsõmisütsüs]], miä luudi 1990. aastagal, ku [[Eesti NSV]] [[Jõgõva rajuun]] nimetediq ümbre Jõgõva maakunnas. 
 
+<gallery>
+Kuremaa mõisa peahoone.jpg|
+Kuremaa mõisa tuuleveski.jpg|
+Torma kirik3.jpg|
+Kaiu järv 26-05-2012.JPG|
+Laiuse linnuse varemed1.jpg|
+Palamuse kihelkonnakooli hoone.jpg|
+</gallery>
+
 {{Eesti Vabariigi maakunnaq}}
 
 [[Katõgooria:Eesti maakunnaq]]
