*Empty MediaWiki Message*

--- a/Veleq_Wrightiq.mw
+++ b/Veleq_Wrightiq.mw
@@ -24,7 +24,7 @@
 <!--|rahvus=-->
 <!--|ammõt=-->
 }}
-Veleq '''Wrighti Orville''' (Orville Wright, 1871-1948) ja '''Wilbur''' (Wilbur Wright, 1867-1912) olliq kats ameeriklast, kiä märgeq vällä ja ehitiq valmis kõgõ edimädse [[linnuk]]i, miä linnas', nink teiq tuuga [[17. joulukuu päiv|17. joulukuu pääväl]] [[1903]] edimädse linnu.<ref name="WDL">{{cite web |url = http://www.wdl.org/en/item/11372/ |title = Telegram from Orville Wright in Kitty Hawk, North Carolina, to His Father Announcing Four Successful Flights, 1903 December 17 |website = [[World Digital Library]] |date = 1903-12-17 |accessdate = 2013-07-22 }}</ref>
+Veleq '''Wrighti Orville''' (Orville Wright, 1871-1948) ja '''Wilbur''' (Wilbur Wright, 1867-1912) olliq kats ameeriklast, kiä märgeq vällä ja ehitiq valmis kõgõ edimädse [[linnuk]]i, miä linnas', nink teiq tuuga [[17. joulukuu päiv|17. joulukuu pääväl]] [[1903]] edimädse linnu.<ref>http://www.wdl.org/en/item/11372/</ref>
 
 ==Lätteq==
 <references/>
