--- a/Järvä_maakund.mw
+++ b/Järvä_maakund.mw
@@ -1,5 +1,14 @@
 '''Järvä maakund''' om põrõhõlladsõ [[Eesti]] Vabariigi [[1. järgo valitsõmisütsüs]], miä luudi 1990. aastagal, ku [[Eesti NSV]] [[Paidõ rajuun]] nimetediq ümbre Järvä maakunnas. 
 
+<gallery>
+Seidla mõisa tuuleveski1.jpg|
+Esna allikajärv.jpg|
+Albu mõisa sild 2012.jpg|
+Ervita mõisa peahoone.jpg|
+Järva-Peetri kirik2.jpg|
+Laupa mõisa peahoone 2012.jpg|
+</gallery>
+
 {{Eesti Vabariigi maakunnaq}}
 
 [[Katõgooria:Eesti maakunnaq]]
