--- a/Viländi_maakund.mw
+++ b/Viländi_maakund.mw
@@ -1,5 +1,14 @@
 '''Viländi maakund''' om põrõhõlladsõ [[Eesti]] Vabariigi [[1. järgo valitsõmisütsüs]], miä luudi 1990. aastagal, ku [[Eesti NSV]] [[Viländi rajuun]] nimetedi ümbre Viländi maakunnas. 
 
+<gallery>
+Arussaare õigeusu kirik.jpg|
+Suure-Kõpu mõisa peahoone 2012.jpg|
+Heimtali mõisa viinaköök1.jpg|
+Pärsti mõisa peahoone 2012.jpg|
+Õisu järv.jpg|
+Viljandi ordulinnuse varemed.jpg|
+</gallery>
+
 {{Eesti Vabariigi maakunnaq}}
 
 [[Katõgooria:Eesti maakunnaq]]
