--- a/Harjo_maakund.mw
+++ b/Harjo_maakund.mw
@@ -1,5 +1,14 @@
 '''Harjo maakund''' om põrõhõlladsõ [[Eesti]] Vabariigi [[1. järgo valitsõmisütsüs]], miä luudi 1990. aastagal, ku [[Eesti NSV]] [[Harjo rajuun]] nimetediq ümbre Harjo maakunnas. 
 
+<gallery>
+Tuhala Witches Well1-21-03-2013.jpg|
+Kiviloo mõisa peahoone.jpg|
+Laitse mõisa peahoone2, 19.saj.jpg|
+Kose kirik suvi 2012.jpg|
+Jägala juga 22-03-2013.JPG|
+Paadimees Paunküla veehoidlal.jpg|
+</gallery>
+
 {{Eesti Vabariigi maakunnaq}}
 
 [[Katõgooria:Eesti maakunnaq]]
