--- a/Rapla_maakund.mw
+++ b/Rapla_maakund.mw
@@ -1,5 +1,14 @@
 '''Rapla maakund''' om põrõhõlladsõ [[Eesti]] Vabariigi [[1. järgo valitsõmisütsüs]], miä luudi 1990. aastagal, ku [[Eesti NSV]] [[Rapla rajuun]] nimetediq ümbre Rapla maakunnas. 
 
+<gallery>
+Valtu mõisa -Puraviku- tuuleveski.jpg|
+Kohila vesiveski2.jpg|
+Hageri kirik 2012.jpg|
+Sutlema mõisa väravatorn 02-08-2012.jpg|
+Kohila mõisa peahoone.jpg|
+Lohu mõisa peahoone (1).jpg|
+</gallery>
+
 {{Eesti Vabariigi maakunnaq}}
 
 <!--Categories-->
