*Empty MediaWiki Message*

--- a/Lordi.mw
+++ b/Lordi.mw
@@ -1,5 +1,5 @@
 [[Pilt:Lordi en Bracelona 10.jpg|400px|thumb|Lordi mängmän [[Barcelona]]n 2009. aastagal. Kuralt hääle: Kita, OX, Mr. Lordi, Awa, Amen]]
-'''Lordi''' om [[Soomõ]] [[rokkmuusiga|rokkansambli]], miä tull' kokko 1996. aastagal.
+'''Lordi''' om [[Soomõ]] [[rokkmuusiga|rokkansambli]], miä tull' kokko 1992. aastagal.
 
 Ansambli paistus silmä tuu poolõst, et püüne pääl kandvaq nääq maskõ ja kostüüme nink tarvitasõq püroteknikat. Soomõn sai Lordi tuntus 2002. aastagal ilmunu singliga "Would You Love a Monsterman?".
 
@@ -8,11 +8,12 @@ Ansambli paistus silmä tuu poolõst, et püüne pääl kandvaq nääq maskõ ja
 
 == Liikmõq ==
 
-* Tomi Putaansuu, Mr. Lordi (1996-)
+* Tomi Putaansuu, Mr. Lordi (1992-)
 * Jussi Sydänmaa, Amen (1996-)
 * Samer el Nahhal, Ox (2005-)
 * Mana (2012-)
 * Hella (2012-)
+
 * Sampsa Astala, Kita (2000-2010)
 * Sami Keinänen, G-stealer (1996-1999)
 * Sami Wolking, Magnum (1999-2002)
@@ -23,6 +24,8 @@ Ansambli paistus silmä tuu poolõst, et püüne pääl kandvaq nääq maskõ ja
 
 == Albomiq ==
 
+* [[Napalm Market]] (1993)
+* [[Bend Over and Pray the Lord]] (1997)
 * [[Get Heavy]] (2002)
 * [[The Monsterican Dream]] (2004)
 * [[The Arockalypse]] (2006)
