--- a/Seto_kiil.mw
+++ b/Seto_kiil.mw
@@ -5,7 +5,7 @@
 * [[Eesti kiil]]
 
 == Välislingiq ==
-* [http://www.setoinstituut.ee Seto Instituut']
+* [http://www.setoinstituut.ee Seto Instituut]
 * [http://www.wi.ee Võro Instituut']
 * [http://www.ut.ee/lekeskus Tarto Ülikooli Lõuna-Eesti keele- ja kultuuriuuringidõ keskus]
 
