*Empty MediaWiki Message*

--- a/Paramore.mw
+++ b/Paramore.mw
@@ -1,5 +1,5 @@
 [[Pilt:Paramore Honda Civic Tour 6.jpg|350px|thumb|Hayley Williams ja Paramore''"Honda Civic Tour"''il (2010)]]
-'''Paramore''' om United States [[rokkmuusiga|rokkansambli]], miä tull' kokko 2004. aastagal.
+'''Paramore''' om [[Ameeriga Ütisriigiq|Ameeriga Ütisriike]] [[rokkmuusiga|rokkansambli]], miä tull' kokko 2004. aastagal.
 
 == Liikmõq ==
 * Hayley Williams 
@@ -30,5 +30,5 @@
 | 2008
 |}
 
-[[Katõgooria:Inglüse muusiga]]
+[[Katõgooria:Ameeriga Ütisriike muusiga]]
 [[Katõgooria:Rokkansambliq]]
