*Empty MediaWiki Message*

--- a/Paramore.mw
+++ b/Paramore.mw
@@ -8,8 +8,8 @@
 
 == Albomiq ==
 {| class="wikitable"
-!Titel
-!Data wydańo 
+!Päälkiri
+!Ilmumisaastak 
 |-
 | ''All We Know Is Falling ''
 | 2005
@@ -30,5 +30,5 @@
 | 2008
 |}
 
-[[Katõgooria:Ameeriga Ütisriike muusiga]]
+[[Katõgooria:Ameeriga Ütisriike ansambliq]]
 [[Katõgooria:Rokkansambliq]]
