*Empty MediaWiki Message*

--- a/Hino_järv.mw
+++ b/Hino_järv.mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Hino järv
-| pilt =
+| pilt = [[Pilt:Hino järv 2013 08.jpg|250px|]]
 | pildiallkiri = 
 | kihlkund = Vahtsõliina
 | järve_juuskvaq = 
