added visual data

--- a/Lavvamäng.mw
+++ b/Lavvamäng.mw
@@ -1,7 +1,7 @@
 [[Pilt:Maler der Grabkammer der Nefertari 003.jpg|250px|thumb|[[Egüptüs]]e kuninganna [[Nefertari]] mäng lavvamängo [[senet]]. Maal Nefertari (1295–1255 i.m.a.) havvakambrist]]
 
 '''Lavvamäng''' om [[mäng]], midä mängitäs kimmide riiglide perrä kuigimuudu kujondõt mängolavva pääl mängonuppega, midä saa liigutaq, lavva päält ärq võtta vai sinnäq mano pandaq. Hariligult om lavvamängol tsiht, näütüses vastamängjä kõik nupiq ärq võtta vai uma nupiga edimädsenä mängolavva kimmähe paika (kodo) joudaq. Näütüses [[tamka]] ja [[malõ]] ommaq lavvamängoq.
-
+[[File:Board Games in North America 01.JPG|thumb|North American board games]]
 {{commonscat|Board games}}
 
 [[Katõgooria:Lavvamängoq]]
