--- a/Aruküla.mw
+++ b/Aruküla.mw
@@ -1,4 +1,4 @@
-[[Pilt:Arukyla_Mois.jpg|thumb|Aruküla mõisa]
+[[Pilt:Arukyla_Mois.jpg|thumb|Aruküla mõisa]]
 
 '''Aruküla''' om allõv [[Harju maakund|Harju maakunnan]], [[Raasiku vald|Raasiku valla]] keskus. 
 
