--- a/Vikipeediä.mw
+++ b/Vikipeediä.mw
@@ -20,6 +20,7 @@ Tarkvaras pruugitas:
 
 == Kaeq viil ==
 * [[Wikipedia:Tutvustus|Vikipeediä tutvustus]]
+chupa peneeeeeeeeee
 
 == Välislingiq ==
 * [http://www.wikipedia.org Vikipeediä kodoleht]
