*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlus_(2013)_est.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_est.mw
@@ -11,6 +11,7 @@
 * [[Wikipedia:Artiklivõistlusõst osavõtjaq artikliq (2013)|Osavõtjad ja artiklid]]
 |}
 
+''NB! See on artiklivõistluse eestikeelne tekst, nagu ta oli võistluse ajal. Võistluse järgselt täiendatud on ainult teksti [[Wikipedia:Artiklivõistlus (2013) vro|võrukeelne algversioon]].''
 
 '''Artiklivõistlus''' toimub 2013. aastal võru Vikipeediäs esimest korda. Selle eesmärk on saada Vikipeediäle juurde nii artikleid kui ka kirjutajaid. 
 
