--- a/Wikipedia:Artiklivõistlus_(2013)_set.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_set.mw
@@ -2,6 +2,7 @@
 {{Nowrap|[[Pilt:Flag of Estonia.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) est|Eesti keeles]]}}
 {{Nowrap|[[Pilt:Flag_of_Setomaa.svg|border|25px]] [[Wikipedia:Artiklivõistlus (2013) set|Seto keeleh]]}}
 
+''NB! Seo om artiklivõistlusõ setokeeline tekst, nigu taa oll' võistlusõ aol. Peräh võistlust tävvendet om õnnõ teksti [[Wikipedia:Artiklivõistlus (2013) vro|võrokeeline algkujo]].''
 
 {| cellpadding="3" cellspacing="3" style="float:right; margin:5px; border:2px solid; border-color:#CFCFCF; text-size: small; background:#ffffff"
 |[[Pilt:Võrokõisi_lipp.png|150px|keskel]]
