--- a/Wikipedia:Artiklivõistlus_(2013)_vro.mw
+++ b/Wikipedia:Artiklivõistlus_(2013)_vro.mw
@@ -18,7 +18,7 @@ Võistlus oll' hää võimalus võrokeelist vapa võrgoentsüklopeediät inemiis
 
 Võistlust peeti 2013. aastal 2. lehekuu pääväst (maist) kooniq 2. piimäkuu pääväni (juunini). Võistlõma võidsõ tullaq egäl aol tuu vaihõ seen. 
 
-Võistlusõ tulõmuisist [[http://wikimediaeesti.wordpress.com/2013/06/25/vorokeelidse-vikipeedia-edimane-artiklivoistlus loeq siist]].
+'''Võistlusõ tulõmuisist''' [[http://wikimediaeesti.wordpress.com/2013/06/25/vorokeelidse-vikipeedia-edimane-artiklivoistlus '''loeq siist''']].
 
 
 ==Kiä võidsõq ossa võttaq?==
