--- a/Hiina_Rahvavabariik.mw
+++ b/Hiina_Rahvavabariik.mw
@@ -29,6 +29,17 @@ benispenis
 
 == Kultuur ==
 
+siperpäivät sniper on best
+
+ja beenis
+
+hiina päris  mucho grande
+
+miikka is das best
+
+
+hiina tüü tagasipüürdmäld !!!!!
+
 == Välislingiq ==
 
 == Kaeq viil ==
