Pilt, {{commonscat|Sid Vicious}}

--- a/Viciousõ_Sid.mw
+++ b/Viciousõ_Sid.mw
@@ -1,4 +1,4 @@
-[[Pilt:Sid Vicious.JPG|thumb|right|Viciousõ Sid]]
+[[Pilt:Vicious.jpg|thumb|Viciousõ Sid]]
 '''Viciousõ Sid''' (Sid Vicious), [[inglüse]] [[punk]][[punkrock|rocki]] [[laulja]] (1957-1979).
 
 == Plaadiq ==
@@ -67,8 +67,8 @@
 * [[Rotteni Johnny]]
 
 == Välislink ==
-
-* http://groups.myspace.com/sidvicious
+{{commonscat|Sid Vicious}}
+* [http://groups.myspace.com/sidvicious groups.myspace.com]
 
 [[Category:Punk]]
 [[Category:Rock]]
