*Empty MediaWiki Message*

--- a/Kähri_(Põlva).mw
+++ b/Kähri_(Põlva).mw
@@ -11,6 +11,8 @@
 
 '''Kähri''' om [[külä]] [[Põlva kihlkund|Põlva kihlkunnan]] [[Põlva vald|Põlva vallan]]. Kähri külän om [[Kähri kerik|vinne õigõuso kerik]]. 
 
+[[File:Kähri õigeusu kirik 2013-08.jpg|thumb|Kähri õigõuso kerik 2013.a]]
+
 ==Kaeq viil==
 
 *[[Kähri]]
