--- a/Väimälä_mõisa.mw
+++ b/Väimälä_mõisa.mw
@@ -1,3 +1,5 @@
+[[File:Väimela mõisa peahoone eestvaade 2013-09.jpg|thumb|Väimälä mõisa päähoonõ iist puult, 2013.a]]
+
 '''Väimälä mõisa''' (sks. k. ''Waimel, Alt-Waimel'') oll' [[perismõisa]] [[Põlva kihlkund|Põlva kihlkunnan]] põrõhõlladsõ [[Võro vald|Võro valla]] alal. Edimäne tiidüs Väimälä mõisast om aastagast [[1590]]. Mõisahuunõq jääseq [[Väimälä]] alõvikku [[Võro]]-[[Põlva]] tii viirde. Richteride aol [[19. aastagasada|19. aastagasaa]] alostusõn vällä ehitet sümmiitriline varaklassitsistlik mõisakompleks om üts ilosampi [[Võromaa]]l.  
 
 ==Inemiseq==
@@ -8,6 +10,8 @@
 *Perämäne umanik oll' 1902. aastagast Löweni Bernhard Ludwig.
 
 ==Huunõq==
+
+[[File:Väimela mõisa vankrikuur 2011-06.jpg|thumb|Väimälä mõisa vankrikuur 2011.a]]
 
 Mõisakompleksi keskusõs oll' ütekõrdnõ lammõ katussõga päähoonõq, miä oll' tagakülega [[Väimälä  järv]]e poolõ. Huunõ fassaadi kaunistiq pilastriq - keskrisaliidil neli pilastrit ja kummalgi külgrisaliidil kats paarinpilastrit. Kaarjadsõq müürüq veiq päähuunõ külgi päält kokko katõ siibhuunõgaq - noist üts oll' val'tsõjamaja, tõnõ tiinjidemaja. Siibhuunidõ keskkotussil ommaq kolmnukkfrontooniq ni sainapind om sääl rusteerit. 
 
