--- a/Jakapäiv.mw
+++ b/Jakapäiv.mw
@@ -78,3 +78,4 @@ Piirak tull' paksu koorõga ja suurõ leevä suurtunõ.
 == Lätteq ==
 <references>
 [[katõgooria:Seto rahvakallendri]]
+[[katõgooria:Artikliq seto keelen]]
