--- a/Lammas.mw
+++ b/Lammas.mw
@@ -1,4 +1,5 @@
 [[Pilt:Flock of sheep.jpg|200px|thumb|Lambakari]]
+[[Pilt:Ovejas en Patagonia - Argentina.jpg|250px|left|thumb|Lambad [[Argentina]]]]
 
 '''Lammas''' om [[kodoelläi]]. Täl kasus pikk karv, minkast saias [[vill]]a. Lambit peetäs hariligult kar'aviisi.
 
