--- a/Võro_lipp.mw
+++ b/Võro_lipp.mw
@@ -34,6 +34,7 @@ Lipuvalijit oll' kokko 955 inemist. Võrokõsõq valõq umas lipus rohilidsõ-va
 ==Välislingiq==
 *[http://www.umaleht.ee/index.php?leht=6028&keel=226 Võrokõisi lipukonkursi tulõmuisist aolehen Uma Leht]
 
+*[http://www.voroselts.ee/Vorokoisi-lipp1 Võrokõisi lipust Võro Seldsi VKKF kodolehe pääl]
 
 [[Category:Võromaa]]
 [[Category:Võro kiil]]
