*Empty MediaWiki Message*

--- a/Soomõ.mw
+++ b/Soomõ.mw
@@ -35,25 +35,25 @@ Soomõ pindala (maisõmaa ja siseviikogoq kokko) om 338 430,53 km&sup2;. Üten m
 Riigipiiri pikkus om 3940 km. Tuust 614 km om piir Roodsiga, 736 km piir Norraga, 1340 km piir Vinnemaaga ja 1250 km om viipiiri.
 
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Elias Aukusti Peltonen ==
-""pieraisee""
+"pieraisee"
 == Poliitiga ==
 Soomõ om parlamentaarnõ vabariik. Riigipää om president. President om Niinistö Sauli ja pääministri Kataineni Jyrki.
 
