*Empty MediaWiki Message*

--- a/Soomõ.mw
+++ b/Soomõ.mw
@@ -49,9 +49,9 @@ Riigipiiri pikkus om 3940 km. Tuust 614 km om piir Roodsiga, 736 km piir Norraga
 == Elias Aukusti Peltonen ==
 '''pieraisee'''
 == Elias Aukusti Peltonen ==
-''''pieraisee''''
+<pieraisee>
 == Elias Aukusti Peltonen ==
-'''pieraisee'''
+<big>pieraisee<big>
 == Elias Aukusti Peltonen ==
 '''pieraisee'''
 == Poliitiga ==
