*Empty MediaWiki Message*

--- a/Soomõ.mw
+++ b/Soomõ.mw
@@ -49,7 +49,7 @@ Riigipiiri pikkus om 3940 km. Tuust 614 km om piir Roodsiga, 736 km piir Norraga
 == Elias Aukusti Peltonen ==
 '''pieraisee'''
 == Elias Aukusti Peltonen ==
-<pieraisee>
+<small>pieraisee<small>
 == Elias Aukusti Peltonen ==
 <big>pieraisee<big>
 == Elias Aukusti Peltonen ==
