--- a/Soomõ.mw
+++ b/Soomõ.mw
@@ -34,26 +34,8 @@ Soomõ pindala (maisõmaa ja siseviikogoq kokko) om 338 430,53 km&sup2;. Üten m
 
 Riigipiiri pikkus om 3940 km. Tuust 614 km om piir Roodsiga, 736 km piir Norraga, 1340 km piir Vinnemaaga ja 1250 km om viipiiri.
 
-== Elias Aukusti Peltonen ==
-'''pieraisee'''
-== Elias Aukusti Peltonen ==
-'pieraisee'
-== Elias Aukusti Peltonen ==
-'''pieraisee'''
-== Elias Aukusti Peltonen ==
-''pieraisee''
-== Elias Aukusti Peltonen ==
-'''pieraisee'''
-== Elias Aukusti Peltonen ==
-'''pieraisee'''
-== Elias Aukusti Peltonen ==
-'''pieraisee'''
-== Elias Aukusti Peltonen ==
-<small>pieraisee<small>
-== Elias Aukusti Peltonen ==
-<big>pieraisee<big>
-== Elias Aukusti Peltonen ==
-'''pieraisee'''
+== Aolugu ==
+
 == Poliitiga ==
 Soomõ om parlamentaarnõ vabariik. Riigipää om president. President om Niinistö Sauli ja pääministri Kataineni Jyrki.
 
@@ -100,4 +82,4 @@ Soomõn eläs Jouluvana (''Joulupukki'').
 {{ÕuruupaMaaq}}
 
 [[Katõgooria:Soomõ]]
-[[Katõgooria:Õuruupa riigiq]
+[[Katõgooria:Õuruupa riigiq]]
