--- a/Võro.mw
+++ b/Võro.mw
@@ -53,6 +53,7 @@ Võro liina edimäne kodanik-elänik oll' [[Narva]]st tulnuq kaupmiis Smirnovi P
 
 *[[Võro Instituut]] om 1995. aastagal Kultuuriministeeriümi mano luud tiidüsasotus. Instituudi tüüq ja tegemiseq pututasõq päämidselt aoluulist [[Võromaa]]d ja nuuq piät avitama [[Võrokõsõq|võrokõisil]] alalõ hoitaq umma kiilt ja esiqumatsit kombit.
 
+[[Pilt:Võru I Põhikool.JPG|pisi|[[Võro 1. Põhikuul]] ]]
 ===Kooliq===
 
 Võro liinan om (2006. a. saisoga) 8 kuuli: 4 keskkuuli, 2 põhikuuli ja 2 huvikuuli.
@@ -79,6 +80,7 @@ Võro Instituudi majan käü 2009. aastaga sügüsest kuun võrokeeline [[keelep
 Võro liinast om peri tunnõtuid sportlaisi, näütüses olümpiavõitja [[Noolõ Erki]].
 
 ==Midä kaiaq tasos== 
+[[Pilt:Võru Suurkannataja Ekaterina kirik 2013.JPG|pisi|Võre Apostlik Õigõuso kerik]]
 *[[Kreutzwaldi Friedrich Reinhold]]i mälehtüssammas ja park [[Tamula järv]]e veeren.
 *Rippsild [[Tamula järv]]e põh'anukan [[Roosisaar]]õ pääle.
 *[[Roosisaar]]õ pääl silla lähkün muinsuskaitsõalonõ kiviao elopaik.
