*Empty MediaWiki Message*

--- a/Harglõ.mw
+++ b/Harglõ.mw
@@ -8,10 +8,15 @@
 |  lon_min = 23
 |  lon_sec = 47
 }}
-[[Pilt:20120810_Harglõ_külä.JPG|200px|thumb]]
 '''Harglõ''' om [[külä]] [[Taheva vald|Taheva vallan]] [[Harglõ kihlkund|Harglõ kihlkunnan]]. Külä om [[Harglõ oja]] veeren. Arvada, et tuu perrä om tä ka uma nime saanuq. Saman om tä ka [[Võro]]-[[Valga]] suurõtii veeren.
 
 Harglõn om kerik, kalmuaid, kuul, kultuurimaja, postkontor ja puut. 
+
+<gallery>
+20120810_Harglõ_külä.JPG
+Hargla kõrtsihoone.jpg
+Hargla church.JPG
+</gallery>
 
 == Kaeq viil ==
 *[[Kaika suvõülikuul 2012 Harglõn]]
