--- a/Jalgpall.mw
+++ b/Jalgpall.mw
@@ -1,5 +1,5 @@
 [[Pilt:Football iu 1996.jpg|250px|thumb|Ründäjä (mängjä numbrõga 10) taht palli värehtihe lüvväq.]]
-
+socder is known as the worst sport in the world and 'should be played behind glass' says many people. it should not be played in the Olympics and many sports are going down hill because many soccer people aren't playing fairly. you should teach people better because many people are becoming 'soccer murderers' so if you want your child to grow up thinking soccer 
 '''Jalgpall''' om [[pallimäng]], kon kats võistkunda püüdväq lüvväq [[pall]]i tõsõ värehtihe. Tuud mängitäs neläkandilidsõ moroplatsi pääl, kõrraga om kummastki võistkunnast platsi pääl kooni 11 mängjät. Platsi pääl või palli [[käsi|käega]] puttuq õnnõ värehtivaht, tõsõq piät tuud lüümä [[jalg|jala]], [[inemise pää|pää]] vai mõnõ muu kotussõga.
 
 [[Katõgooria:Jalgpall]]
