*Empty MediaWiki Message*

--- a/Naanõ.mw
+++ b/Naanõ.mw
@@ -1,4 +1,4 @@
-[[Pilt:Beautiful Blonde Woman at the beach.jpg|200px|thumb|Naanõ võtt päivä]]
+[[Pilt:Frau-neutral.jpg|150px|thumb|Naanõ võtt päivä]]
 
 '''Naanõ''' om täüskasunu [[imäne]] [[inemine]]. 
 
