The file [[:Image:IMF_HQ.jpg]] has been replaced by [[:Image:Headquarters_of_the_International_Monetary_Fund_(Washington,_DC).jpg]] by administrator [[:commons:User:Steinsplitter]]: ''[[commons:COM:FR|File renamed]]: not the headquarters of the Interna...

--- a/Riikevaihõlinõ_Rahafond.mw
+++ b/Riikevaihõlinõ_Rahafond.mw
@@ -1,4 +1,4 @@
-[[Pilt:IMF HQ.jpg|200px|thumb|IMFi pääkortin Washingtonin]]
+[[Pilt:Headquarters_of_the_International_Monetary_Fund_(Washington,_DC).jpg|200px|thumb|IMFi pääkortin Washingtonin]]
 
 '''Riikevaihõlinõ Rahafond''' (inglüse keelen ''International Monetary Fund'', lühkolt '''IMF''') om organisats'uun, miä tegeles tuuga, et hoitaq riike rahho vaihtamiskursiq stabiilsõq ja tukõq majandusõ arõngut. Timä pääkortin om [[Washington]]in [[Ameeriga Ütisriigiq|Ameeriga Ütisriigen]].
 
