--- a/Võro_kiil.mw
+++ b/Võro_kiil.mw
@@ -13,7 +13,7 @@
 [[File:South Estonian today.PNG|thumb|290px|right|Lõunõeesti keeleala. Võro kiil om märgit [[punanõ|punatsõga]].]]
 [[Pilt:Voromkaart.jpg|thumb|290px|right|Võro keeleala - Võromaa umin vanon piiren Tarto- ja Setomaa ni Vinnemaa ja Läti vaihõl]]
 [[File:Speakers-of-South-Estonian-2012.png|thumb|290px|right|2011. aastaga rahvaloendusõ perrä oll' kokko 101 857 lõunõeesti kiili mõistjat, noist 74 499 võro, 12 549 seto, 9 698 mulgi ja 4 109 tarto keele mõistjat ni 1 002 inemist, kiä märgi-is täpsämbähe, määnest lõunõeesti kiilt nä mõistvaq.]]
-[[Pilt:Wastne Võro keeli A B D raamat.jpg|thumb|290px|left|Vana, 1885. aastaga võrokeeline aabits "Wastne Wõro keeli ABD raamat", autor Hurda Johann]]
+[[Pilt:Wastne Võro keeli A B D raamat.jpg|thumb|290px|right|Vana, 1885. aastaga võrokeeline aabits "Wastne Wõro keeli ABD raamat", autor Hurda Johann]]
 
 '''Võro kiil''' om [[soomõ-ugri keeleq|soomõ-ugri kiili]] [[õdagumeresoomõ keeleq|õdagumeresoomõ]] lõunarühmä [[kiil]]. Võro keele lähkümbäq sugulasõq ommaq tõõsõq [[lõunaeesti kiil|lõunaeesti keeleq]], [[eesti kiil]], [[liivi kiil|liivi]] ja [[vad'a kiil|vad'a]] kiil. Võro kiilt või pitäq Eesti põlitsõs piirkundlidsõs keeles vai [[regionaalkiil|regionaalkeeles]]. Tõisi arvamiisi perrä om võrokõisi kiil lõunaeesti keele vai eesti  keele lõunaeesti murdõrühmä vai päämurdõ Võro [[murrõq]]. Võro kiil om lõunaeesti keelist kõgõ suurõmb, täl om 74 499<ref> [[Statistikaamet]] [http://pub.stat.ee/px-web.2001/Dialog/varval.asp?ma=RLE07&lang=2]</ref> kõnõlõjat põhilidsõlt Lõuna-Eestin, vanal [[Võromaa]]l, mink ala käü parhillanõ Võro ja Põlva maakund ni osa Tarto ja Valga maakunnast (Karula, Harglõ, Urvastõ, Rõugõ, Kanepi, Põlva, Räpinä ja Vahtsõliina [[kihlkund]]). Küländ hulga võro keele mõistjit om seo ilma aigo ka [[Tarto]]n, [[Talliin]]an ja muial Eestin.
 
