--- a/Kanti_Immanuel.mw
+++ b/Kanti_Immanuel.mw
@@ -13,7 +13,7 @@
 }}
 '''Kanti Immanuel''' (Immanuel Kant, 1724-1804) oll' [[S'aksamaa|s'aksa]] filosuuf, kiä elli [[Preisi Kuningriik|preisi]] liinan [[Königsberg]]in (s'oo ilma aigu [[Vinnemaa]] liin [[Kaliningrad]]). Tedä peetäs muudsa [[Õuruupa]] ja illadsõ [[valgustusaigž|valgustusao]] ütes mõokambas mõtlõjas. 
 
-[[Nietschei Friedrich]]
+[[Nietzschei Friedrich]]
 
 {{commons|Immanuel Kant}}
 
