--- a/5._aastagasada.mw
+++ b/5._aastagasada.mw
@@ -1,1 +1,3 @@
 '''5. aastagasada''' om [[aastagasada]], miä [[Gregoriusõ kallendri]] perrä naas' pääle [[1. vahtsõaastakuu päiv|1. vahtsõaastakuu pääväl]] [[401]] ja lõpõs [[31. joulukuu päiv|31. joulukuu pääväga]] [[500]].
+
+[[Katõgooria:5. aastagasada]]
