Pruukja [[Special:Contributions/193.167.81.153|193.167.81.153]] ([[User_talk:193.167.81.153|arotus]]) toimõndusõq pöörediq tagasi ja leht panti tagasi pruukja [[User:Addbot|Addbot]] tettü kujo pääle.

--- a/Hiina_Rahvavabariik.mw
+++ b/Hiina_Rahvavabariik.mw
@@ -17,9 +17,8 @@ Internetitunnus=[[.cn]]
 1949-1976 oll' riigijuhis [[Mao Zedong]].
 
 == Poliitiga ==
-aasdasdas homoja
 
-benispenis
+== Luudus ==
 
 == Valitsõmisjaotus ==
 
@@ -28,17 +27,6 @@ benispenis
 == Rahvastik ==
 
 == Kultuur ==
-
-siperpäivät sniper on best
-
-ja beenis
-
-hiina päris  mucho grande
-
-miikka is das best
-
-
-hiina tüü tagasipüürdmäld !!!!!
 
 == Välislingiq ==
 
