*Empty MediaWiki Message*

--- a/Nietzsche_Friedrich.mw
+++ b/Nietzsche_Friedrich.mw
@@ -1,7 +1,7 @@
 {{Elokäük
 |pilt=Portrait of Friedrich Nietzsche.jpg
-|pildiallkiri=Nietzschei Friedrich
-|nimi=Nietzschei Friedrich
+|pildiallkiri=Nietzsche Friedrich
+|nimi=Nietzsche Friedrich
 |umakeeline_nimi=Friedrich Nietzsche
 |sünnüaig=[[15. rehekuu päiv]] [[1844]]
 |sünnüpaik= [[Röcken]], [[Preisi Kuningriik]]
@@ -11,7 +11,7 @@
 |rahvus=s'akslanõ
 |ammõt=filosuuf
 }}
-'''Nietzschei Friedrich''' (Friedrich Nietzsche; [[Röcken]], [[15. rehekuu päiv]] [[1844]] - [[Weimar]], [[25. põimukuu päiv]] [[1900]]) oll' [[S'aksamaa|s'aksa]] [[filosuuf]], [[luulõtaja]] ja [[viiesepp]].
+'''Nietzsche Friedrich''' (Friedrich Nietzsche; [[Röcken]], [[15. rehekuu päiv]] [[1844]] - [[Weimar]], [[25. põimukuu päiv]] [[1900]]) oll' [[S'aksamaa|s'aksa]] [[filosuuf]], [[luulõtaja]] ja [[viiesepp]].
 
 {{commons|Friedrich Nietzsche}}
 
