*Empty MediaWiki Message*

--- a/Nietzsche_Friedrich.mw
+++ b/Nietzsche_Friedrich.mw
@@ -11,7 +11,7 @@
 |rahvus=s'akslanõ
 |ammõt=filosuuf
 }}
-'''Nietzsche Friedrich''' (Friedrich Nietzsche; [[Röcken]], [[15. rehekuu päiv]] [[1844]] - [[Weimar]], [[25. põimukuu päiv]] [[1900]]) oll' [[S'aksamaa|s'aksa]] [[filosuuf]], [[luulõtaja]] ja [[viiesepp]].
+'''Nietzsche Friedrich''' (Friedrich Nietzsche; [[Röcken]], [[15. rehekuu päiv]] [[1844]] - [[Weimar]], [[25. põimukuu päiv]] [[1900]]) oll' [[S'aksamaa|s'aksa]] [[filosuuf]], [[keeletiidläne]], [[luulõtaja]] ja [[viiesepp]].
 
 {{commons|Friedrich Nietzsche}}
 
