/* Muu ilma inemiseq */

--- a/15._rehekuu_päiv.mw
+++ b/15._rehekuu_päiv.mw
@@ -20,7 +20,7 @@
 * ...
 
 === Muu ilma inemiseq ===
-* ...
+* [[1844]] - [[Nietzsche Friedrich]], s'aksa filosuuf
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
