/* Muu ilma inemiseq */

--- a/22._mahlakuu_päiv.mw
+++ b/22._mahlakuu_päiv.mw
@@ -21,6 +21,7 @@
 
 === Muu ilma inemiseq ===
 * [[1870]] - [[Lenini Vladimir]], NSVL riigijuht
+* [[1724]] - [[Kanti Immanuel]], s'aksa filosuuf
 
 == Koolnuq ==
 === [[Võromaa inemiseq|Võro-]] ja [[Setomaa inemiseq|Setomaa]] inemiseq ===
