--- a/Inglüsmaa.mw
+++ b/Inglüsmaa.mw
@@ -14,9 +14,9 @@ Internetitunnus= olõ-iq
 '''Inglüsmaa''' vai '''Inglismaa''' ([[inglüse kiil|inglüse keelen]] ''England'') om maa, miä om osa [[Ütiskuningriik|Ütiskuningriigist]]. Inglüsmaal eläs umbõs 83% Ütiskuningriigi inemiisist. Tä võtt hindä ala [[Suurbritannia]] saarõ lõunapoolidsõq  kats kolmandatossa. Timäst põh'a puul om [[Sotimaa]], õdagu puul om [[Kõmrimaa]] nink viil om tä piiret [[Põh'ameri|Põh'amere]], [[Keldi meri|Keldi mere]], [[Bristoli kanal]]i ja [[Inglüse kanal]]iga. Inglüsmaa [[pääliin]] [[London]] om üteliidsi ka Ütiskuningriigi pääliin. 
 
 == Kaeq viil ==
-[[Ütiskuningriik]]
-[[Kõmrimaa]]
-[[Sotimaa]]
+*[[Ütiskuningriik]]
+*[[Kõmrimaa]]
+*[[Sotimaa]]
 
 {{commons|England}}
 {{ÕuruupaMaaq}}
