*Empty MediaWiki Message*

--- a/Sotimaa.mw
+++ b/Sotimaa.mw
@@ -21,6 +21,12 @@ Soti Kuningriik oll' hindäperi riik 1. lehekuu pääväni 1707, ku tä lei ütt
 
 Riigikeeles om Sotimaal inglüse kiil, ammõtligult tunnistõduq piirkundlidsõq keeleq ommaq soti ja gaeli kiil.
 
+== Kaeq viil ==
+*[[Ütiskuningriik]]
+*[[Inglüsmaa]]
+*[[Kõmrimaa]]
+
+
 {{commons|Scotland}}
 {{ÕuruupaMaaq}}
 
