*Empty MediaWiki Message*

--- a/Ütiskuningriik.mw
+++ b/Ütiskuningriik.mw
@@ -13,6 +13,12 @@
 
 '''Ütiskuningriik''' (inglüse keelen ''United Kingdom''), täüsnimega '''Suurõbritannia ja Põh'a-Iirimaa Ütiskuningriik''' (''United Kingdom of Great Britain and Northern Ireland'') om [[Õuruupa]] riik. Ütiskuningriigin om neli maad: [[Inglüsmaa]], [[Sotimaa]], [[Kõmrimaa]] ja [[Põh'a-Iirimaa]]. Ütiskuningriigi pääliin om [[London]].
 
+== Kaeq viil ==
+*[[Inglüsmaa]]
+*[[Kõmrimaa]]
+*[[Sotimaa]]
+
+
 {{commons|United Kingdom}}
 {{Õuruupa Liido riigiq}}
 {{ÕuruupaMaaq}}
