--- a/Wikipedia:Arotusõtarõ.mw
+++ b/Wikipedia:Arotusõtarõ.mw
@@ -1062,3 +1062,14 @@ Thanks,
 [[m:User:Geoffbrigham|Geoff]] & [[m:User:YWelinder (WMF)|Yana]] 8. rehekuu 2013, kell 20:05 (UTC)
 </div>
 <!-- EdwardsBot 0601 -->
+== IMPORTANT: Admin activity review == 
+
+Hello. A new policy regarding the removal of "advanced rights" (administrator, bureaucrat, etc) was recently adopted by [[:m:Requests for comment/Activity levels of advanced administrative rights holders|global community consensus]] (your community received a notice about the discussion). According to this policy, the [[:m:stewards|stewards]] are reviewing administrators' activity on smaller wikis. To the best of our knowledge, your wiki does not have a formal process for removing "advanced rights" from inactive accounts. This means that the stewards will take care of this according to the new [[:m:Admin activity review|admin activity review]] here.
+
+We have determined that the following users meet the inactivity criteria (no edits and no log actions for more than 2 years):
+
+#Ker (administrator)
+
+These users will receive a notification soon, asking them to start a community discussion if they want to retain some or all of their rights. If the users do not respond, then their advanced rights will be removed by the stewards.
+
+However, if you as a community would like to create your own activity review process superseding the global one, want to make another decision about these inactive rights holders, or already have a policy that we missed, then please notify the [[:m:Stewards' noticeboard|stewards on Meta-Wiki]] so that we know not to proceed with the rights review on your wiki. Thanks, [[Pruukja:QuiteUnusual|QuiteUnusual]] ([[Pruukja arotus:QuiteUnusual|arutelu]]) 9. rehekuu 2013, kell 08:08 (UTC)
