'Nl-arms.gif' -> 'Royal Coat of Arms of the Netherlands.svg' using [[commons:Commons:GlobalReplace|GlobalReplace v0.2a - Fastily's PowerToys]]: vector version

--- a/Holland.mw
+++ b/Holland.mw
@@ -2,7 +2,7 @@
 Nimi=Koninkrijk der Nederlanden|
 Genitiiv=Hollandi|
 Lipp=Image:Flag of the Netherlands.svg|
-Vapp'=Image:Nl-arms.gif|
+Vapp'=Image:Royal Coat of Arms of the Netherlands.svg|
 Tunnuslausõq=Je Maintiendrai|
 Kaart=Image:LocationNetherlands.png|
 Riigikiil'=[[hollandi kiil']]|
