sunnitud kat: et Juuksed

--- a/Hiuss.mw
+++ b/Hiuss.mw
@@ -5,3 +5,5 @@
 Hiusõq kasusõq jälq, kui näid lühkeses lõigatas. [[Miis|Mehel]] või hiuss, ku kassuq lastas, katõ ja poolõ [[jalg (mõõt)|jala]] pikkudsõs minnäq, pikembäs mitte. A ku kõik maahalõigaduq hiusõjaoq kokko kor'adaq ja ütte säiäq, sõs om kuvvõkümneaastagadsõ vanamehe hiuss 21 jalga pikk.
 
 [[Katõgooria:Anatoomia]]
+
+[[et:Juuksed]]
