--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -29,6 +29,7 @@ Telefonikuud'=423|
 '''Liechtensteini Vürstiriik''' ([[s'aksa kiil|s'aksa keelen]] ''Fürstentum Liechtenstein'') om [[Õuruupa]] riik.
 
 == Aolugu ==
+prut mås med tarmfandango jeg bolded din mor. i fucked your momma DAMN NIGGA !!!!!!!
 
 == Poliitiga ==
 
