--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -32,6 +32,7 @@ Telefonikuud'=423|
 prut mås med tarmfandango jeg bolded din mor. i fucked your momma DAMN NIGGA !!!!!!!
 
 == Poliitiga ==
+N.O.P.E = Negere Over Reagere På Egern
 
 == Luudus ==
 
