--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -35,6 +35,7 @@ prut mås med tarmfandango jeg bolded din mor. i fucked your momma DAMN NIGGA !!
 N.O.P.E = Negere Over Reagere På Egern
 
 == Luudus ==
+Luudus = Blad Lus
 
 == Valitsõmisjaotus ==
 
