--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -38,6 +38,7 @@ N.O.P.E = Negere Over Reagere På Egern
 Luudus = Blad Lus
 
 == Valitsõmisjaotus ==
+Hamit Dit Fede Svin I AM DAMN RACIZT NIGGA !!! Fuck Your Back Ppl Im GOnna Shot Your Ass Off And Fuck Yo MAmma
 
 == Majandus ==
 
