--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -41,6 +41,7 @@ Luudus = Blad Lus
 Hamit Dit Fede Svin I AM DAMN RACIZT NIGGA !!! Fuck Your Back Ppl Im GOnna Shot Your Ass Off And Fuck Yo MAmma
 
 == Majandus ==
+Jeg druknede din mor i vaseline og skød din kat i hovedet med en H.I.V infiktion.
 
 == Rahvastik ==
 
