--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -46,7 +46,7 @@ Jeg druknede din mor i vaseline og skød din kat i hovedet med en H.I.V infiktio
 == Rahvastik ==
 
 == Kultuur ==
-The Niggas Invaed Your House And Fucked All Women Thats Why Your Black
+The Niggas Invaded Your House And Fucked All Women Thats Why Your Black
 
 == Välislingiq ==
 
