--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -44,6 +44,7 @@ Hamit Dit Fede Svin I AM DAMN RACIZT NIGGA !!! Fuck Your Back Ppl Im GOnna Shot 
 Jeg druknede din mor i vaseline og skød din kat i hovedet med en H.I.V infiktion.
 
 == Rahvastik ==
+[[Pilt:Pis I Din Mor|pisi]]
 
 == Kultuur ==
 The Niggas Invaded Your House And Fucked All Women Thats Why Your Black
