--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -45,6 +45,7 @@ Jeg druknede din mor i vaseline og skød din kat i hovedet med en H.I.V infiktio
 
 == Rahvastik ==
 [[Pilt:Pis I Din Mor|pisi]]
+I Draw Muhhamed And Posted Him On Facebook And Shoot Your Mamma
 
 == Kultuur ==
 The Niggas Invaded Your House And Fucked All Women Thats Why Your Black
