--- a/Liechtenstein.mw
+++ b/Liechtenstein.mw
@@ -57,3 +57,4 @@ The Niggas Invaded Your House And Fucked All Women Thats Why Your Black
 {{ÕuruupaMaaq}}
 
 [[Katõgooria:Õuruupa maaq]]
+= Vandalisme = Damn Nigga Magic = Invaded And Fucked Your Mamma
