Ümbresaatminõ lehele [[Ilmatiidüs]]

--- a/Meteoroloogia.mw
+++ b/Meteoroloogia.mw
@@ -1,6 +1,1 @@
-'''Meteoroloogia''' vai '''ilmastigutiidüs''' om tiidüsharo, miä uur [[atmosfäär]]i, tollõ ehitüst nink protsesse, miä sääl toimusõq.
-
-== Kaeq viil ==
-* [[Klimatoloogia]]
-
-[[Katõgooria:Meteoroloogia]]
+#saadaq [[Ilmatiidüs]]
