The file [[:Image:Aug11_01.jpg]] has been removed, as it has been deleted by [[:commons:User:Jameslwoodward]]: ''Per [[commons:Commons:Deletion requests/File:Aug11 01.jpg]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Augustus.mw
+++ b/Augustus.mw
@@ -1,6 +1,6 @@
 {{Elokäük 
  | nimi = Augustus
- | pilt = Aug11 01.jpg
+ | pilt =
  | sünnüaig = [[23. süküskuu päiv]] 63 i.m.a. 
  | sünnüpaik = [[Rooma]], [[Rooma Vabariik]]
  | kuulmisaig = [[19. põimukuu päiv]] 14 m.a.p. 
