--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -9,7 +9,7 @@ Siin nimekirän ommaq võrokeelidse Vikipeediä 2013. aastaga artiklivõistlusõ
 * [[Jaigi_Juhan]]. [[Pruukja:Margareths1|Margareths1]] ([[Pruukja arotus:Margareths1|arotus]])
 * [[Hiiobi Otto]]. [[Pruukja:Tsirgutii|Tsirgutii]] ([[Pruukja arotus:Tsirgutii|arotus]])
 * [[Jakapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
-* [[Palu_Jaan]]. [[Pruukja:Amyk|Amyk]] ([[Pruukja arotus:Amyk|arotus]])
+* [[Palu Jaan]]. [[Pruukja:Amyk|Amyk]] ([[Pruukja arotus:Amyk|arotus]])
 * [[Kivisild (Tarto)]]. [[Pruukja:Mruut|Mruut]] ([[Pruukja arotus:Mruut|arotus]])
 * [[Oksaneni Sofi]]. [[Pruukja:Mruut|Mruut]] ([[Pruukja arotus:Mruut|arotus]])
 * [[Mõlapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
