*Empty MediaWiki Message*

--- a/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
+++ b/Wikipedia:Artiklivõistlusõst_osavõtjaq_artikliq_(2013).mw
@@ -6,7 +6,7 @@ Siin nimekirän ommaq võrokeelidse Vikipeediä 2013. aastaga artiklivõistlusõ
 
 * [[Kandsimägi (Kiräpää)]]. [[Pruukja:Annahkur|Annahkur]] ([[Pruukja arotus:Annahkur|arotus]])
 *[[Zetod]]. [[Pruukja:Adeliine|Adeliine]] ([[Pruukja arotus:Adeliine|arotus]])
-* [[Jaigi_Juhan]]. [[Pruukja:Margareths1|Margareths1]] ([[Pruukja arotus:Margareths1|arotus]])
+* [[Jaigi Juhan]]. [[Pruukja:Margareths1|Margareths1]] ([[Pruukja arotus:Margareths1|arotus]])
 * [[Hiiobi Otto]]. [[Pruukja:Tsirgutii|Tsirgutii]] ([[Pruukja arotus:Tsirgutii|arotus]])
 * [[Jakapäiv]]. (seto keeleh) [[Pruukja:Sügüsene|Sügüsene]] ([[Pruukja arotus:Sügüsene|arotus]])
 * [[Palu Jaan]]. [[Pruukja:Amyk|Amyk]] ([[Pruukja arotus:Amyk|arotus]])
