/* Edemeheq ja -naasõq */

--- a/Võro_Selts_VKKF.mw
+++ b/Võro_Selts_VKKF.mw
@@ -34,7 +34,8 @@ Egä aastak andas vällä ka muid umakeelitsit raamatit ja kõrraldõdas tõisi 
 *[[Saarõ Evar]] (1997-1998)
 *[[Avarmaa Tea]] (1998-2000) 
 *[[Rahmani Jan]] (2001-2006)
-*[[Ojari Triinu]] (2007-)
+*[[Ojari Triinu]] (2007-2013)
+*Rahmani Jan (2013-)
 
 == Välläannõt preemiäq == 
 
