*Empty MediaWiki Message*

--- a/Paidra_järv.mw
+++ b/Paidra_järv.mw
@@ -1,7 +1,7 @@
 {{VõromaaJärv 
 | nimi = Paidra järv
-| pilt =
-| pildiallkiri = 
+| pilt = [[File:Paidra järv 2013 10.jpg|250px|Paidra järv 2013. aastagal]]
+| pildiallkiri = Paidra järv 2013. aastagal
 | kihlkund = Rõugõ
 | järve_juuskvaq = 
 | järvest_juuskvaq_vällä = 
