*Empty MediaWiki Message*

--- a/Aalupi_järv.mw
+++ b/Aalupi_järv.mw
@@ -1,7 +1,7 @@
 {{VõromaaJärv 
 | nimi = Aalupi järv
-| pilt =
-| pildiallkiri = 
+| pilt = [[File:Aalupi järv 2013 08.jpg|250px|Aalupi järv 2013. aastagal]]
+| pildiallkiri =  Aalupi järv 2013. aastagal
 | kihlkund = Urvastõ
 | järve_juuskvaq = 
 | järvest_juuskvaq_vällä = 
