--- a/Meenikunno_maastigukaitsõala.mw
+++ b/Meenikunno_maastigukaitsõala.mw
@@ -1,5 +1,6 @@
 '''Meenikunno maastikukaitsõala''' om kaitsõala [[Võromaa]]l [[Räpinä kihlkund|Räpinä kihlkunna]] lõunaotsan [[Veriora vald|Veriora vallan]]. Kaitsõala om luud 1981. aastaga lehekuu 25. pääväl. Timä suurus om 1757 ha. Tuust 53% võtt hindä ala [[Meenikunno suu]], 1% ommaq viikogoq ni ülejäänüq 46% om  mõtsa all.
  
+[[File:Ilumetsa Põrguhaud 2013 08.jpg|thumb|Ilomõtsa taivakivihaud "Põrguhaud"]]
 Kaitsõala om tett tuu jaos, et hoita alalõ Hummogu-Eestile tüüpilist suud, suusaari haruldaisi taimi, kaitsa umanäolist maastikku, arõnõvit älvit ni Nohipalo Must- ja Valgjärve. Turismitegevüs kaitsõalal olõ-iq kuigi suur. Inemiseq saavaq esiq kävvü kaeman Meenikunno suud, Nohipalo järvi ja Ilomõtsa taivakivihaudo.
 
 [[Category:Luuduskaidsõq]]
