*Empty MediaWiki Message*

--- a/Tsooru_järv.mw
+++ b/Tsooru_järv.mw
@@ -1,7 +1,7 @@
 {{VõromaaJärv 
 | nimi = Tsooru järv
-| pilt =
-| pildiallkiri = 
+| pilt = [[File:Tsooru järv 2013 08.jpg|250px|Tsooru järv 2013. aastagal]]
+| pildiallkiri = Tsooru järv 2013.aastagal
 | kihlkund = Rõugõ
 | järve_juuskvaq = 
 | järvest_juuskvaq_vällä = 
