*Empty MediaWiki Message*

--- a/Pulli_järv.mw
+++ b/Pulli_järv.mw
@@ -1,7 +1,7 @@
 {{VõromaaJärv 
 | nimi = Pulli järv
-| pilt =
-| pildiallkiri = 
+| pilt = [[File:Pullijärv 2013 08.jpg|250px|Pulli järv 2013. aastagal]]
+| pildiallkiri = Pulli järv 2013. aastagal
 | kihlkund = Vahtsõliina
 | järve_juuskvaq = 
 | järvest_juuskvaq_vällä = 
