*Empty MediaWiki Message*

--- a/Varstu_järv.mw
+++ b/Varstu_järv.mw
@@ -1,7 +1,7 @@
 {{VõromaaJärv 
 | nimi = Varstu järv
-| pilt =
-| pildiallkiri = 
+| pilt = [[File:Varstu paisjärv 2013 08.jpg|250px|Varstu järv 2013. aastagal]]
+| pildiallkiri = Varstu järv 2013. aastagal
 | kihlkund = Rõugõ
 | järve_juuskvaq = 
 | järvest_juuskvaq_vällä = 
