*Empty MediaWiki Message*

--- a/Mustjärv_(Luhasuu).mw
+++ b/Mustjärv_(Luhasuu).mw
@@ -1,7 +1,7 @@
 {{VõromaaJärv 
 | nimi = Mustjärv
-| pilt =
-| pildiallkiri = 
+| pilt = [[File:Mustjärv Luhasoos 2013 08.jpg|250px|Luhasuu Mustjärv 2013. aastagal]]
+| pildiallkiri = Luhasuu Mustjärv 2013. aastagal
 | kihlkund = Rõugõ
 | järve_juuskvaq = 
 | järvest_juuskvaq_vällä = 
