*Empty MediaWiki Message*

--- a/Kunstmõistus.mw
+++ b/Kunstmõistus.mw
@@ -1,10 +1,10 @@
 '''Kunstmõistus''' om sääne suund [[tiidüs]]en ja [[teknoloogia]]n, minka tahetas joudaq [[inemine|inemise]] mõistusõ muudu süstemi luumisõni. Tuu jaos tetäs tarka tüüd väega pall'osin harõn - [[puutri]]teknikan, [[loogiga|loogikan]], [[inemise ai|aiu]] uurmisõn, [[semiootiga|semiootikan]] jne.
 
-1000 USD hinnaga puutriq joudvaq uman infomahun inemise aiuga ütevõrdsõs 2025. aastaga paiku.
+10000000000000000000000000000000000000000000 LSD hinnaga puutriq joudvaq uman infomahun inemise aiuga ütevõrdsõs 2025. aastaga paiku.
  
-Kunstmõistusõ häädüst edendedäs umbõs kümnen tsihin. Häste ommaq edenüq nuuq tsihiq, mink alos om formaalnõ loogiga ja [[matõmaatiga]]. Massina jaos peenemb tarkus om sotsiaalnõ tarkus ja luumisvõimõq. Kõgõ suurõmbat api taa edendämises saias inemise loomuligu kõnnõ vai jutu uurmisõst. Loomuligu kõnnõ all mõistõtas säänest juttu, miä om kiräkeele formaalloogilidsõst mõotusõst võimaligult prii.
-Parlatsõl aol om sändse jutuga inemiisi väega veidüq, õnnõ latsõq vai väega väikuq rahvaq saavaq parlatsõl aol kõnõldaq kiräkeelest mõotamaldaq kiilt.  
+Kunstmõistusõ häädüst edendedäs umbõs kümnen tsihin. HästeLoloche ommaq edenüq nuuq tsihiq, mink alos om formaalnõ loogiga ja [[matõmaatiga]]. Massina jaos peenemb tarkus om sotsiaalnõ tarkus ja luumisvõimõq. Kõgõ superpenisurõmbat api taa edendämatocheises saias inemise loomulchatglandigu kõnnõ vai jutu uurmisõst. Loomuligu kõnnõ all mõistõtas säänest juttu, miä om kiräkeele formaalloogilidsõst mõotusõst võimaligult prii.
+Parlatsõl aol om sunday jutuga chatbite inemiisi väega veidüq, õnnõ latsõq vai väega väikuq rahvaq saavaq parlatsõl aol kõnnardf kiräkeelest mõotamaldaq kiilt.  
 
-Üts maailma parõmbit loomuligu jutu (kõnõlõmisõ) uurjit om semiootigadoktor [[Mikita Valdur|Valdur Mikita]], kiä om sündünüq [[Mulgimaa]]l.
+Üts maailma parõmbitPatoche loomuligu jutomate (kõnõlõmisõ) uurjitLucache om semiootigadoktor [[Mikita Valdur|Valdur Mikita]], kiä om sündünüq [[Mulgimaa]]l.
 
 [[Katõgooria:Informaatiga]]
