--- a/Uibu.mw
+++ b/Uibu.mw
@@ -1,10 +1,10 @@
-[[pilt:Malus-domestica-blomstring.JPG|300px|thumb|Uibu]]
+[[pilt:Malus-domestica-blomstring.JPG|300px|thumb|Häitsvä uibu]]
 
 '''Uibu''' ('''Aid-uibu''', ''Malus domestica'') om küländ matal, 5–12 miitri korgunõ [[viläpuu]], mink vili om [[upin]]. 
 
 == Aolugu ja periolõminõ ==
 Inemiseq naksiq uibit kasvatama umbõs 20 000 aastakka tagasi ja tuuga või taa ollaq maailma edimäne kodostõt kasv. 
-Aid-uibu luuduslidsõs iinkäüjäs peetäs mägi-uibut (''Malus sieversii''), miä kasus Õdagu-[[Hiina]]n [[Xinjiang]]in ja [[Kesk-Aasia]]n. Tuun kandin, [[Kasastanin]], om ka [[Almatõ]] liin, mink nimi tähendäs uibut. 
+Aid-uibu luuduslidsõs iinkäüjäs peetäs mägi-uibut (''Malus sieversii''), miä kasus Õdagu-[[Hiina]]n [[Xinjiang]]in ja [[Kesk-Aasia]]n. Tuun kandin, [[Kasastan]]in, om ka [[Almatõ]] liin, mink nimi tähendäs uibut. 
 
 Eestin om uibu kõgõ hariligumb ja külmäkimmämb viläpuu. Om teedäq, et uibit kasvatõdi Eestin kluustridõ man jo keskaol. te.
 
@@ -18,4 +18,4 @@ Mõtsikult kasuvit uibusortõ tundas umbõs 33. Nuuq kasusõq kõik põh'apuulke
 
 [[Katõgooria:Viläpuuq]]
 
-[[Eesti:Aed-õunapuu]]
+[[Eesti:Õunapuu]]
