*Empty MediaWiki Message*

--- a/Uibu.mw
+++ b/Uibu.mw
@@ -18,4 +18,4 @@ Mõtsikult kasuvit uibusortõ tundas umbõs 33. Nuuq kasusõq kõik põh'apuulke
 
 [[Katõgooria:Viläpuuq]]
 
-[[Eesti:Õunapuu]]
+[[et:Õunapuu]]
