*Empty MediaWiki Message*

--- a/Uibu.mw
+++ b/Uibu.mw
@@ -19,3 +19,4 @@ Mõtsikult kasuvit uibusortõ tundas umbõs 33. Nuuq kasusõq kõik põh'apuulke
 [[Katõgooria:Viläpuuq]]
 
 [[et:Õunapuu]]
+[[fr:Pommier domestique]]
