--- a/Konsabi_Voldemar.mw
+++ b/Konsabi_Voldemar.mw
@@ -1,3 +1,3 @@
-'''Konsapi Voldemar''' elli 1902-1976. Tä oll' [[Räpinä]] miiskoori juhataja. 
+'''Konsapi Voldemar''' elli 1902-1976. Tä oll' [[Räpinä]] miiskoori juhataja. Timä veli [[Konsapi Paul]] oll ka muusikamiis.
 
 [[Katõgooria:Võromaa inemiseq]]
