--- a/Konsabi_Voldemar.mw
+++ b/Konsabi_Voldemar.mw
@@ -1,3 +1,5 @@
-'''Konsapi Voldemar''' elli 1902-1976. Tä oll' [[Räpinä]] miiskoori juhataja. Timä veli [[Konsapi Paul]] oll ka muusikamiis.
+'''Konsabi Voldemar''' (Voldemar Konsap) oll' muusigamiis, [[Räpinä]] miiskoori juhataja, kiä elli 1902-1976. Timä veli [[Konsapi Paul]] oll' ka muusigamiis.
 
 [[Katõgooria:Võromaa inemiseq]]
+
+[[et:Voldemar Konsap]]
