*Empty MediaWiki Message*

--- a/Vana-Koiola_järv.mw
+++ b/Vana-Koiola_järv.mw
@@ -29,4 +29,6 @@ Järvest püvvetäs kallo, nii suvõl ku talvõl. Pall'o om [[sudak]]it, [[latik
 
 Viikasvõ om veidüq, a planktonit pall'o.
 
+[[Pilt:Vana-Koiola järv 2011 09.jpg|pisi|left|Vana-Koiola järv 2011. aastagal]]
+
 [[Katõgooria:Põlva kihlkunna järveq]]
