*Empty MediaWiki Message*

--- a/Kõrbjärv_(Tilsi).mw
+++ b/Kõrbjärv_(Tilsi).mw
@@ -24,5 +24,6 @@
 
 ==Viieläjäq ja -kasvoq==
 
+[[Pilt:Tilsi Kõrbjärv 2013 08.jpg|pisi|left|Tilsi Kõrbjärv 2013. aastagal]]
 
 [[Katõgooria:Põlva kihlkunna järveq]]
