--- a/Haanimaa.mw
+++ b/Haanimaa.mw
@@ -1,3 +1,5 @@
+[[Pilt:Haanja 2010 01 1.jpg|pisi|Haani korgõmaa 2010. aastagal [[Suur Munamägi|Suure Munamäe]] tornist kaetuna]]
+
 '''Haanimaa''' om põlinõ kultuuripiirkund [[Võromaa]]l, miä võtt hindä ala suurõmba osa [[Rõugõ kihlkund|Rõugu kihlkunna]] hummogujaost ja Haani korgõstmaast. Haanimaa um esiqeräline nii uma mägidse luudu ku ka muust Võromaast parõmbahe alalõhoitunu põlidsõ keele, kultuuri ja eloviie poolõst. Haanimaa um jaet mitmõ umavalitsusõ ([[Haani vald|Haani]], [[Rõugõ vald|Rõugõ]] ja [[Vahtsõliina vald]]) vaihõl ja timä keskus om [[Haani]] külä üteh [[Eesti]] ja Baltimaiõ kõgõ korgõmba mäe [[Suur Munamägi|Suurõ Munamäega]].
 
 Haanimaa põlidsõ keele, kultuuri ja eloviie alalõhoitmisõ ja edesiviimise iist pidä tiidsähe huult innekõgõ [[Haanimiihhi nõvvokoda]], a üteh avitasõq ka tõõsõq seldsiq ja ütisüseq. Haanimaa luudu, a ka eloviie hoitminõ om ka [[Haani luuduspark|Haani luuduspargi]] ülesannõq.
