*Empty MediaWiki Message*

--- a/Zagreb.mw
+++ b/Zagreb.mw
@@ -1,7 +1,7 @@
 {{liin
 |  nimi = Zagreb
 <!--|  umakeeline_nimi_1 = | |-->
-|  pilt = [[Pilt:Zagreb skyline.JPG|250px]]
+|  pilt = [[Pilt:Zagreb trg bana Jelačića.jpg|250px]]
 |  pildiallkiri = 
 |  riik = Horvaatia
 |  suurus = 641
