*Empty MediaWiki Message*

--- a/Teräs.mw
+++ b/Teräs.mw
@@ -1,3 +1,4 @@
+[[File:The viaduct La Polvorilla, Salta Argentina.jpg|thumb|Teräs]]
 '''Teräs''' om [[sullam]], mink põhikomponent om [[raud]] nink mink seen om pääle tõisi [[keemiline element|elemente]] ([[väävli]], [[fosfor]] jne.) kooni 2,14% [[hüdsäsnik]]ku. 
 
 Ku ravvasulamin om üle 2,14 % hüdsäsnikku, kutsutas tuud [[malm]]is.
