*Empty MediaWiki Message*

--- a/Haanimaa.mw
+++ b/Haanimaa.mw
@@ -1,4 +1,4 @@
-[[Pilt:Haanja 2010 01 1.jpg|pisi|Haani korgõmaa 2010. aastagal [[Suur Munamägi|Suure Munamäe]] tornist kaetuna]]
+[[Pilt:Haanja 2010 01 1.jpg|pisi|Haani korgõmaa 2010. aastagal [[Suur Munamägi|Suurõ Munamäe]] tornist kaiaq]]
 
 '''Haanimaa''' om põlinõ kultuuripiirkund [[Võromaa]]l, miä võtt hindä ala suurõmba osa [[Rõugõ kihlkund|Rõugu kihlkunna]] hummogujaost ja Haani korgõstmaast. Haanimaa um esiqeräline nii uma mägidse luudu ku ka muust Võromaast parõmbahe alalõhoitunu põlidsõ keele, kultuuri ja eloviie poolõst. Haanimaa um jaet mitmõ umavalitsusõ ([[Haani vald|Haani]], [[Rõugõ vald|Rõugõ]] ja [[Vahtsõliina vald]]) vaihõl ja timä keskus om [[Haani]] külä üteh [[Eesti]] ja Baltimaiõ kõgõ korgõmba mäe [[Suur Munamägi|Suurõ Munamäega]].
 
