*Empty MediaWiki Message*

--- a/Pirnipuu.mw
+++ b/Pirnipuu.mw
@@ -1,9 +1,9 @@
-'''Pirnipuu''' ('''Aid-pirnipuu''', ''... domestica'') om [[viläpuu]], mink vili om [[pirn]]. 
+'''Pirnipuu''' (''Pyrus communis'') om [[viläpuu]], mink vili om [[pirn]]. 
 
 == Kaeq viil ==
 *[[Pirn]]
 
-{{Commons|...}}
+{{Commons|Pyrus communis}}
 
 [[Katõgooria:Viläpuuq]]
 
