--- a/Reykjavík.mw
+++ b/Reykjavík.mw
@@ -1,7 +1,7 @@
 {{liin
 |  nimi = Reykjavík
 <!--|  umakeeline_nimi_1 = | |-->
-|  pilt = [[Pilt:Reykjavik, Iceland-13July2011.jpg|250px]]
+|  pilt = 
 |  pildiallkiri = 
 |  riik = Island
 |  suurus = 275
