--- a/Vaskna_järv.mw
+++ b/Vaskna_järv.mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Vaskna järv
-| pilt =
+| pilt = [[Pilt:Vaskna järv Haanjas.jpg|300px|]]
 | pildiallkiri = 
 | kihlkund = Rõugõ
 | järve_juuskvaq = 
