--- a/Palujüri_järv.mw
+++ b/Palujüri_järv.mw
@@ -1,6 +1,6 @@
 {{VõromaaJärv 
 | nimi = Palujüri järv
-| pilt =
+| pilt = [[Pilt:Palujüri järv.jpg|300px|Palujüri järv]]
 | pildiallkiri = 
 | kihlkund = Rõugõ
 | järve_juuskvaq = 
