*Empty MediaWiki Message*

--- a/London.mw
+++ b/London.mw
@@ -17,7 +17,7 @@
 |  kaardiallkiri = Kon London Ütiskuningriigin om
 }}
 
-'''London''' om [[Ütiskuningriik|Ütiskuningriigi]] ja [[Inglüsmaa]] [[pääliin]] ja [[Rahvidõ Ütisüs]]e keskus. London om [[Õuruupa]] kõgõ suurõmb liin päält Moskvat, Õuruupa kõgõ suurõmb sadamaliin päält Rotterdammi ja maailma kõgõ tähtsämb rahandus- ja kaubanduskeskus päält New Yorki.
+'''London''' om [[Ütiskuningriik|Ütiskuningriigi]] ja [[Inglüsmaa]] [[pääliin]] ja [[Rahvidõ Ütisüs]]e keskus. London om [[Õuruupa]] kõgõ suurõmb liin päält Moskvat, Õuruupa kõgõ suurõmb sadamaliin päält Rotterdammi ja maailma kõgõ tähtsämb rahandus- ja kaubanduskeskus päält [[New York]]i.
 
 [[Pilt:London 360 from St Paul's Cathedral - Sept 2007.jpg|thumb|800px|Seoilmaaolidsõ Londoni panoraam, kaet Pühä Pauli katõdraali kuldkalõriist]]
 
