*Empty MediaWiki Message*

--- a/York.mw
+++ b/York.mw
@@ -16,7 +16,7 @@
 |  kaardiallkiri = Kon London Ütiskuningriigin om
 }}
 -->
-'''York''' om [[liin]] ja Põh'a-[[Inglüsmaa]]l, kotussõ pääl, kon [[Ouse]]'i ja [[Foss]]i jõgi kokko saavaq.
+'''York''' om ülikooli[[liin]] ja Põh'a-[[Inglüsmaa]]l, kotussõ pääl, kon [[Ouse]]'i ja [[Foss]]i jõgi kokko saavaq. Timä aolugu om pia 2000 aastakka pikk ja väega kirriv. Pikkä aigo oll' tä Inglüsmaal tähtsüse poolõst tõõnõ liin pääle [[London]]it. Täämpädsel pääväl tuu nii inämb ei olõq.
 
 {{commons|York}}
 
