*Empty MediaWiki Message*

--- a/York.mw
+++ b/York.mw
@@ -16,7 +16,11 @@
 |  kaardiallkiri = Kon London Ütiskuningriigin om
 }}
 -->
-'''York''' om ülikooli[[liin]] ja Põh'a-[[Inglüsmaa]]l, kotussõ pääl, kon [[Ouse]]'i ja [[Foss]]i jõgi kokko saavaq. Timä aolugu om pia 2000 aastakka pikk ja väega kirriv. Pikkä aigo oll' tä Inglüsmaal tähtsüse poolõst tõõnõ liin pääle [[London]]it. Täämpädsel pääväl tuu nii inämb ei olõq.
+'''York''' om ülikooli[[liin]] ja Põh'a-[[Inglüsmaa]]l, kotussõ pääl, kon [[Ouse]]'i ja [[Foss]]i jõgi kokko saavaq. Timä aolugu om pia 2000 aastakka pikk ja väega kirriv. Pikkä aigo oll' tä Inglüsmaal tähtsüse poolõst tõõnõ liin pääle [[London]]it. Täämpädsel pääväl tuu nii inämb ei olõq. 
+
+Yorkin eläs umbõs  154 000 inemist. Liinan om pall'o väiksit katõkõrdsit savikivimajjo. Keskliinan om alalõ pall'o vanno huunit ja noidõ ümbre väega pikk ja hään kõrran liinamüür.
+
+Yorkin om tähtsä kotussõ pääl olnuq raudtiitüüstüs (rongiehitüs ja -remont) ja sokolaaditüüstüs (tast om perit näütüses ''KitKat'' ja ''Yorkie bar''). S'oo ilma aigo ommaq tähtsäq turism, haridus ja meditsiin.
 
 {{commons|York}}
 
