*Empty MediaWiki Message*

--- a/York.mw
+++ b/York.mw
@@ -1,21 +1,21 @@
-<!--{{liin
-|  nimi = London
-|  pilt = [[Pilt:442px - London Lead Image.jpg|250px]]
-|  pildiallkiri = Londoni kaehuisi
+{{liin
+|  nimi = York
+|  pilt = [[York Minster View.jpg|250px]]
+|  pildiallkiri = York
 |  maa = Inglüsmaa
 |  riik = Ütiskuningriik 
-|  suurus = 1579
-|  elänikke = 7 517 700 (2005)
-|  lat_deg = 51
-|  lat_min = 30
+|  suurus = 272
+|  elänikke =  153 717 (2011)
+|  lat_deg = 53
+|  lat_min = 57
 |  lat_ik = N
-|  lon_deg = 0
-|  lon_min = 08
+|  lon_deg = 1
+|  lon_min = 5
 |  lon_ik = W
-|  kaardi_pilt = [[Pilt:London (European Parliament constituency).svg|250px|Kon London Ütiskuningriigin om]]
-|  kaardiallkiri = Kon London Ütiskuningriigin om
+|  kaardi_pilt = [[Pilt:EnglandYork.png|250px|Kon York Inglüsmaal om]]
+|  kaardiallkiri = Kon London Inglüsmaal om
 }}
--->
+
 '''York''' om ülikooli[[liin]] ja Põh'a-[[Inglüsmaa]]l, kotussõ pääl, kon [[Ouse]]'i ja [[Foss]]i jõgi kokko saavaq. Timä aolugu om pia 2000 aastakka pikk ja väega kirriv. Pikkä aigo oll' tä Inglüsmaal tähtsüse poolõst tõõnõ liin pääle [[London]]it. Täämpädsel pääväl tuu nii inämb ei olõq. 
 
 Yorkin eläs umbõs  154 000 inemist. Liinan om pall'o väiksit katõkõrdsit savikivimajjo. Keskliinan om alalõ pall'o vanno huunit ja noidõ ümbre väega pikk ja hään kõrran liinamüür.
