--- a/York.mw
+++ b/York.mw
@@ -1,6 +1,6 @@
 {{liin
 |  nimi = York
-|  pilt = [[York Minster View.jpg|250px]]
+|  pilt = [[York Minster View.jpg|250px|]]
 |  pildiallkiri = York
 |  maa = Inglüsmaa
 |  riik = Ütiskuningriik 
