--- a/York.mw
+++ b/York.mw
@@ -22,7 +22,7 @@ Yorkin eläs umbõs  154 000 inemist. Liinan om pall'o väiksit katõkõrdsit sa
 
 Yorkin om tähtsä kotussõ pääl olnuq raudtiitüüstüs (rongiehitüs ja -remont) ja sokolaaditüüstüs (tast om perit näütüses ''KitKat'' ja ''Yorkie bar''). S'oo ilma aigo ommaq tähtsäq turism, haridus ja meditsiin.
 
-[[Pilt:Clifford's Tower, from south.JPG|250px|thumb|Cliffordi torn, osa Yorki kantsist]]
+[[Pilt:Clifford's Tower, from south.JPG|250px|thumb|left|Cliffordi torn, osa Yorki kantsist]]
 
 [[en:York]]
 
