*Empty MediaWiki Message*

--- a/York.mw
+++ b/York.mw
@@ -22,6 +22,10 @@ Yorkin eläs umbõs  154 000 inemist. Liinan om pall'o väiksit katõkõrdsit sa
 
 Yorkin om tähtsä kotussõ pääl olnuq raudtiitüüstüs (rongiehitüs ja -remont) ja sokolaaditüüstüs (tast om perit näütüses ''KitKat'' ja ''Yorkie bar''). S'oo ilma aigo ommaq tähtsäq turism, haridus ja meditsiin.
 
+==Haridus==
+[[Yorki Ülikuul]] (''The University of York'') mõotas liina ello peris pall'o. Ülikooliliinak om liina lõunõveeren Heslingtoni külän ja põrõhõlla ehitedäs tedä viil suurõmbas. Mõnõq osakunnaq ommaq ka peris liina keskel aoluulidsõn Kuninga mõisan (''King's Manor''). Aastani 2006 oll' Yorki Ülikuul ainukõnõ ülikuul liinan. 2006. aastagal sai Yorki Pühä Johannõsõ Ülikuul (''York St John University''), miä inne oll' Leedsi Ülikooli kolledž, kah ülikooli staatusõ. Viil om Yorkin Õigustiidüse Ülikooli (''The University of Law'') üts osakund (tollõl ülikoolil om osakundõ mitmõn Inglüsmaa liinan). Yorki Ülikooliga om köüdet viil korgõlt hinnat Hulli ja Yorki Meditsiinikuul (''Hull York Medical School''). 
+
+
 [[Pilt:Clifford's Tower, from south.JPG|250px|thumb|left|Cliffordi torn, osa Yorki kantsist]]
 
 [[en:York]]
